# reactor

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  Doxyfile.in  Doxyfile.in.bak  README.md  ci.cmd  ci.sh  pack.sh  start-docker-env.sh
cmake/: FindBenchmark.cmake  code-coverage.cmake  date_time.cmake  enable_flag_if_supported.cmake  forward_to_parent.cmake
doc/: 1_cookbook.md  2_advanced.md  cookbook.md
include/: callback_holder.hpp  reactor.hpp  reactor_utils.hpp
include/reactor/: addon.hpp  addon_base.hpp  addon_filter.hpp  addon_filter_base.hpp  addon_func_map.hpp  addon_registrator.hpp  callback_holder.hpp  client.hpp  contract.hpp  contract_base.hpp  factory.hpp  factory_base.hpp  factory_registrator.hpp  factory_result.hpp  factory_wrapper.hpp  factory_wrapper_registrator.hpp  id_holder.hpp  index.hpp  integer_sequence_polyfil.hpp  lazy_pulley.hpp  make_unique_polyfil.hpp  might_shared_mutex.hpp  not_registred_exception.hpp  priorities.hpp  provider.hpp  provider_ex.hpp  pulley.hpp  pulley_contract.hpp  pulley_type.hpp  r.hpp  reactor.hpp  reactor_dll.hpp  type_already_registred_exception.hpp  typed_contract.hpp  utils.hpp
src/: VERSION.in  config.h.in  contract_base.cpp  factory_base.cpp  not_registred_exception.cpp  r.cpp  reactor.cpp  type_already_registred_exception.cpp
tests/: CMakeLists.txt
tests/reactor_benchmark/: CMakeLists.txt  reactor_benchmark.cpp
tests/unit_tests/: CMakeLists.txt  callback_holder_test.cpp  ext_test_impl.cpp  i_ext_test.hpp  i_test.hpp  main.cpp  reactor_test.cpp  reactor_test_init_helper.cpp  test_contract.hpp
tests/unit_tests/test_lib/: CMakeLists.txt  ext_test_impl.cpp  i_ext_test.hpp
